update font url

--- a/demo/warmup/code/fonts/fonts.css
+++ b/demo/warmup/code/fonts/fonts.css
@@ -2,19 +2,22 @@
   font-family: "Inter-Regular";
   font-style: normal;
   font-weight: 400;
-  src: url("./Inter-Regular.woff2") format("woff2");
+  src: url("/test-prototypes/demo/warmup/code/fonts/Inter-Regular.woff2")
+    format("woff2");
 }
 
 @font-face {
   font-family: "Inter-Medium";
   font-style: normal;
   font-weight: 600;
-  src: url("./Inter-Medium.woff2") format("woff2");
+  src: url("/test-prototypes/demo/warmup/code/fonts/Inter-Medium.woff2")
+    format("woff2");
 }
 
 @font-face {
   font-family: "Inter-Bold";
   font-style: normal;
   font-weight: 800;
-  src: url("./Inter-Bold.woff2") format("woff2");
+  src: url("/test-prototypes/demo/warmup/code/fonts/Inter-Bold.woff2")
+    format("woff2");
 }
