--- a/demo/warmup/code/fonts/fonts.css
+++ b/demo/warmup/code/fonts/fonts.css
@@ -1,23 +1,20 @@
-@font-face {
+/* @font-face {
   font-family: "Inter-Regular";
   font-style: normal;
   font-weight: 400;
-  src: url("https://github.com/aboutjax/test-prototypes/blob/master/demo/warmup/code/fonts/Inter-Regular.woff2")
-    format("woff2");
+  src: url("/code/fonts/Inter-Regular.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Inter-Medium";
   font-style: normal;
   font-weight: 600;
-  src: url("https://github.com/aboutjax/test-prototypes/blob/master/demo/warmup/code/fonts/Inter-Medium.woff2")
-    format("woff2");
+  src: url("/code/fonts/Inter-Medium.woff2") format("woff2");
 }
 
 @font-face {
   font-family: "Inter-Bold";
   font-style: normal;
   font-weight: 800;
-  src: url("https://github.com/aboutjax/test-prototypes/blob/master/demo/warmup/code/fonts/Inter-Bold.woff2")
-    format("woff2");
-}
+  src: url("/code/fonts/Inter-Bold.woff2") format("woff2");
+} */
