--- a/warmup.framerfx/code/fonts/fonts.css
+++ b/warmup.framerfx/code/fonts/fonts.css
@@ -1,4 +1,4 @@
-@font-face {
+/* @font-face {
   font-family: "Inter-Regular";
   font-style: normal;
   font-weight: 400;
@@ -17,4 +17,4 @@
   font-style: normal;
   font-weight: 800;
   src: url("/code/fonts/Inter-Bold.woff2") format("woff2");
-}
+} */
